feat: верстка "Услуги", "Изготовление" и доработка "Отзывы"

--- a/src/index.html
+++ b/src/index.html
@@ -182,8 +182,63 @@
     <section class="section" id="catalog">
       <div class="container">
         <div class="catalog">
-          <h2 class="section__title">Что мы производим?</h2>
+          <div class="section__header">
+            <h2 class="section__title">Что мы производим?</h2>
+            <a href="" class="link link--nav link--arrow">
+              Весь каталог
+              <svg class="link__arrow svg ms-2" width="13" height="10" viewBox="0 0 10 7" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" clip-rule="evenodd"
+                  d="M6.83007 0.139209L9.86053 3.16392C10.0465 3.34953 10.0465 3.65047 9.86053 3.83608L6.83007 6.86079C6.64411 7.0464 6.3426 7.0464 6.15663 6.86079C5.97067 6.67518 5.97067 6.37424 6.15663 6.18863L8.37418 3.97529L0 3.97529L0 3.02471L8.37418 3.02471L6.15663 0.811367C5.97067 0.625755 5.97067 0.32482 6.15663 0.139209C6.3426 -0.0464029 6.64411 -0.0464029 6.83007 0.139209Z"
+                  fill="#969696"></path>
+              </svg>
+            </a>
+          </div>
+          <!-- /.section__header -->
 
+          <div class="row mb-4">
+            <div class="col-6">
+              <div class="catalog__item">
+                <div class="catalog__picture">
+                  <img src="img/section/catalog/nets.jpg" alt="" class="catalog__image image image--cover">
+                </div>
+                <!-- /.catalog__picture -->
+
+                <div class="catalog__content">
+                  <h3 class="catalog__title mb-2">Москитные сетки и двери</h3>
+                  <p class="catalog__description">Москитные сетки и двери</p>
+                </div>
+                <!-- /.catalog__content -->
+
+                <a class="stretched-link" href=""></a>
+              </div>
+              <!-- /.catalog__item -->
+            </div>
+            <!-- /.col-6 -->
+
+            <div class="col-6">
+              <div class="catalog__item">
+                <div class="catalog__picture">
+                  <img src="img/section/catalog/curtains.jpg" alt="" class="catalog__image image image--cover">
+                </div>
+                <!-- /.catalog__picture -->
+
+                <div class="catalog__content">
+                  <h3 class="catalog__title mb-2">Рулонные шторы и Жалюзи</h3>
+                  <p class="catalog__description">Москитные сетки и двери</p>
+                </div>
+                <!-- /.catalog__content -->
+
+                <a class="stretched-link" href=""></a>
+              </div>
+              <!-- /.catalog__item -->
+            </div>
+            <!-- /.col-6 -->
+          </div>
+          <!-- /.row -->
+
+          <p class="section__description">
+            Наша компания изготавливает москитные сетки и рулонные шторы уже больше 10 лет. Каждая сетка или штора делается строго индивидуально под Ваши окна. В нашем каталоге тысячи цветов и вариаций рисунков для штор, а также, все возможные виды антимоскитного полотна для любой формы москитной сетки.
+          </p>
         </div>
         <!-- /.callback -->
       </div>
@@ -204,8 +259,175 @@
     <section class="section" id="service">
       <div class="container">
         <div class="service">
-          <h2 class="section__title">Другие услуги</h2>
+          <div class="section__header">
+            <h2 class="section__title">Другие услуги</h2>
+            <a href="" class="link link--nav link--arrow">
+              Все услуги
+              <svg class="link__arrow svg ms-2" width="13" height="10" viewBox="0 0 10 7" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" clip-rule="evenodd"
+                  d="M6.83007 0.139209L9.86053 3.16392C10.0465 3.34953 10.0465 3.65047 9.86053 3.83608L6.83007 6.86079C6.64411 7.0464 6.3426 7.0464 6.15663 6.86079C5.97067 6.67518 5.97067 6.37424 6.15663 6.18863L8.37418 3.97529L0 3.97529L0 3.02471L8.37418 3.02471L6.15663 0.811367C5.97067 0.625755 5.97067 0.32482 6.15663 0.139209C6.3426 -0.0464029 6.64411 -0.0464029 6.83007 0.139209Z"
+                  fill="#969696"></path>
+              </svg>
+            </a>
+          </div>
+          <!-- /.section__header -->
 
+          <p class="section__description">
+            Наша компания изготавливает москитные сетки и рулонные шторы уже больше 10 лет. Каждая сетка или штора делается строго индивидуально под Ваши окна. В нашем каталоге тысячи цветов и вариаций рисунков для штор, а также, все возможные виды антимоскитного полотна для любой формы москитной сетки.
+          </p>
+
+          <div class="row">
+            <div class="col-4 mb-5">
+              <div class="service__item">
+                <div class="service__picture">
+                  <img src="img/section/catalog/adjustment.jpg" alt="" class="service__image image image--cover">
+                </div>
+                <!-- /.service__picture -->
+
+                <div class="service__content">
+                  <h3 class="service__title">Регулировка окон</h3>
+                  <span class="service__link link link--arrow">Подробнее
+                    <svg class="link__arrow svg ms-2" width="13" height="10" viewBox="0 0 10 7" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path fill-rule="evenodd" clip-rule="evenodd"
+                        d="M6.83007 0.139209L9.86053 3.16392C10.0465 3.34953 10.0465 3.65047 9.86053 3.83608L6.83007 6.86079C6.64411 7.0464 6.3426 7.0464 6.15663 6.86079C5.97067 6.67518 5.97067 6.37424 6.15663 6.18863L8.37418 3.97529L0 3.97529L0 3.02471L8.37418 3.02471L6.15663 0.811367C5.97067 0.625755 5.97067 0.32482 6.15663 0.139209C6.3426 -0.0464029 6.64411 -0.0464029 6.83007 0.139209Z"
+                        fill="#969696"></path>
+                    </svg>
+                  </span>
+                </div>
+                <!-- /.service__content -->
+
+                <a class="stretched-link" href=""></a>
+              </div>
+              <!-- /.service__item -->
+            </div>
+            <!-- /.col-4 -->
+
+            <div class="col-4 mb-5">
+              <div class="service__item">
+                <div class="service__picture">
+                  <img src="img/section/catalog/lock.jpg" alt="" class="service__image image image--cover">
+                </div>
+                <!-- /.service__picture -->
+
+                <div class="service__content">
+                  <h3 class="service__title">Замки от детей</h3>
+                  <span class="service__link link link--arrow">Подробнее
+                    <svg class="link__arrow svg ms-2" width="13" height="10" viewBox="0 0 10 7" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path fill-rule="evenodd" clip-rule="evenodd"
+                        d="M6.83007 0.139209L9.86053 3.16392C10.0465 3.34953 10.0465 3.65047 9.86053 3.83608L6.83007 6.86079C6.64411 7.0464 6.3426 7.0464 6.15663 6.86079C5.97067 6.67518 5.97067 6.37424 6.15663 6.18863L8.37418 3.97529L0 3.97529L0 3.02471L8.37418 3.02471L6.15663 0.811367C5.97067 0.625755 5.97067 0.32482 6.15663 0.139209C6.3426 -0.0464029 6.64411 -0.0464029 6.83007 0.139209Z"
+                        fill="#969696"></path>
+                    </svg>
+                  </span>
+                </div>
+                <!-- /.service__content -->
+
+                <a class="stretched-link" href=""></a>
+              </div>
+              <!-- /.service__item -->
+            </div>
+            <!-- /.col-4 -->
+
+            <div class="col-4 mb-5">
+              <div class="service__item">
+                <div class="service__picture">
+                  <img src="img/section/catalog/limiter.jpg" alt="" class="service__image image image--cover">
+                </div>
+                <!-- /.service__picture -->
+
+                <div class="service__content">
+                  <h3 class="service__title">Ограничители (гребенки)</h3>
+                  <span class="service__link link link--arrow">Подробнее
+                    <svg class="link__arrow svg ms-2" width="13" height="10" viewBox="0 0 10 7" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path fill-rule="evenodd" clip-rule="evenodd"
+                        d="M6.83007 0.139209L9.86053 3.16392C10.0465 3.34953 10.0465 3.65047 9.86053 3.83608L6.83007 6.86079C6.64411 7.0464 6.3426 7.0464 6.15663 6.86079C5.97067 6.67518 5.97067 6.37424 6.15663 6.18863L8.37418 3.97529L0 3.97529L0 3.02471L8.37418 3.02471L6.15663 0.811367C5.97067 0.625755 5.97067 0.32482 6.15663 0.139209C6.3426 -0.0464029 6.64411 -0.0464029 6.83007 0.139209Z"
+                        fill="#969696"></path>
+                    </svg>
+                  </span>
+                </div>
+                <!-- /.service__content -->
+
+                <a class="stretched-link" href=""></a>
+              </div>
+              <!-- /.service__item -->
+            </div>
+            <!-- /.col-4 -->
+
+            <div class="col-4">
+              <div class="service__item">
+                <div class="service__picture">
+                  <img src="img/section/catalog/lock.jpg" alt="" class="service__image image image--cover">
+                </div>
+                <!-- /.service__picture -->
+
+                <div class="service__content">
+                  <h3 class="service__title">Замки от детей</h3>
+                  <span class="service__link link link--arrow">Подробнее
+                    <svg class="link__arrow svg ms-2" width="13" height="10" viewBox="0 0 10 7" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path fill-rule="evenodd" clip-rule="evenodd"
+                        d="M6.83007 0.139209L9.86053 3.16392C10.0465 3.34953 10.0465 3.65047 9.86053 3.83608L6.83007 6.86079C6.64411 7.0464 6.3426 7.0464 6.15663 6.86079C5.97067 6.67518 5.97067 6.37424 6.15663 6.18863L8.37418 3.97529L0 3.97529L0 3.02471L8.37418 3.02471L6.15663 0.811367C5.97067 0.625755 5.97067 0.32482 6.15663 0.139209C6.3426 -0.0464029 6.64411 -0.0464029 6.83007 0.139209Z"
+                        fill="#969696"></path>
+                    </svg>
+                  </span>
+                </div>
+                <!-- /.service__content -->
+
+                <a class="stretched-link" href=""></a>
+              </div>
+              <!-- /.service__item -->
+            </div>
+            <!-- /.col-4 -->
+
+            <div class="col-4">
+              <div class="service__item">
+                <div class="service__picture">
+                  <img src="img/section/catalog/limiter.jpg" alt="" class="service__image image image--cover">
+                </div>
+                <!-- /.service__picture -->
+
+                <div class="service__content">
+                  <h3 class="service__title">Ограничители (гребенки)</h3>
+                  <span class="service__link link link--arrow">Подробнее
+                    <svg class="link__arrow svg ms-2" width="13" height="10" viewBox="0 0 10 7" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path fill-rule="evenodd" clip-rule="evenodd"
+                        d="M6.83007 0.139209L9.86053 3.16392C10.0465 3.34953 10.0465 3.65047 9.86053 3.83608L6.83007 6.86079C6.64411 7.0464 6.3426 7.0464 6.15663 6.86079C5.97067 6.67518 5.97067 6.37424 6.15663 6.18863L8.37418 3.97529L0 3.97529L0 3.02471L8.37418 3.02471L6.15663 0.811367C5.97067 0.625755 5.97067 0.32482 6.15663 0.139209C6.3426 -0.0464029 6.64411 -0.0464029 6.83007 0.139209Z"
+                        fill="#969696"></path>
+                    </svg>
+                  </span>
+                </div>
+                <!-- /.service__content -->
+
+                <a class="stretched-link" href=""></a>
+              </div>
+              <!-- /.service__item -->
+            </div>
+            <!-- /.col-4 -->
+
+            <div class="col-4">
+              <div class="service__item">
+                <div class="service__picture">
+                  <img src="img/section/catalog/limiter.jpg" alt="" class="service__image image image--cover">
+                </div>
+                <!-- /.service__picture -->
+
+                <div class="service__content">
+                  <h3 class="service__title">Ограничители (гребенки)</h3>
+                  <span class="service__link link link--arrow">Подробнее
+                    <svg class="link__arrow svg ms-2" width="13" height="10" viewBox="0 0 10 7" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path fill-rule="evenodd" clip-rule="evenodd"
+                        d="M6.83007 0.139209L9.86053 3.16392C10.0465 3.34953 10.0465 3.65047 9.86053 3.83608L6.83007 6.86079C6.64411 7.0464 6.3426 7.0464 6.15663 6.86079C5.97067 6.67518 5.97067 6.37424 6.15663 6.18863L8.37418 3.97529L0 3.97529L0 3.02471L8.37418 3.02471L6.15663 0.811367C5.97067 0.625755 5.97067 0.32482 6.15663 0.139209C6.3426 -0.0464029 6.64411 -0.0464029 6.83007 0.139209Z"
+                        fill="#969696"></path>
+                    </svg>
+                  </span>
+                </div>
+                <!-- /.service__content -->
+
+                <a class="stretched-link" href=""></a>
+              </div>
+              <!-- /.service__item -->
+            </div>
+            <!-- /.col-4 -->
+          </div>
+          <!-- /.row -->
         </div>
         <!-- /.callback -->
       </div>
@@ -547,7 +769,7 @@
 
           <p class="section__description">За 10 лет работы, мы успели собрать множество положительных отзывов о своей работе. Большинство клиентов остается довольными и рекомендуют наши услуги и изделия своим знакомым и друзьям. Мы дорожим хорошей репутацией и доверием к нашей деятельности.</p>
 
-          <div class="swiper slider-feedback">
+          <div class="swiper slider-feedback swiper--shadow">
             <div class="swiper-wrapper">
               <div class="swiper-slide">
                 <div class="feedback__card">
