--- a/src/index.html
+++ b/src/index.html
@@ -138,7 +138,7 @@
             <a class="header__phone link link--contact" href="tel:+">+7 977 415-28-17</a>
           </div>
 
-          <button class="header__button button button-outline">Обратный звонок</button>
+          <button data-micromodal-trigger="modal-callback" class="header__button button button-outline">Обратный звонок</button>
         </div>
         <!-- /.header__callback -->
       </div>
@@ -314,7 +314,7 @@
                     <div class="col-6">
                       <div class="input">
                         <input placeholder="Ширина в мм." autocomplete="off" type="number" name="" class="input__field">
-                        <img data-tippy-content="" class="input__warning" src="" alt="">
+                        <img data-tippy-content="" class="input__warning" src="img/icons/misc/warning.svg" alt="">
                       </div>
                       <!-- /.input -->
                     </div>
@@ -323,7 +323,7 @@
                     <div class="col-6">
                       <div class="input">
                         <input placeholder="Высота в мм." autocomplete="off" type="number" name="" class="input__field">
-                        <img data-tippy-content="" class="input__warning" src="" alt="">
+                        <img data-tippy-content="" class="input__warning" src="img/icons/misc/warning.svg" alt="">
                       </div>
                       <!-- /.input -->
                     </div>
@@ -657,19 +657,19 @@
 
                 <div class="input mb-3 mt-4">
                   <input placeholder="Ваше имя" autocomplete="off" type="text" name="user_name" class="input__field">
-                  <img data-tippy-content="Имя содержит недопустимые символы" class="input__warning" src="" alt="">
+                  <img data-tippy-content="Имя содержит недопустимые символы" class="input__warning" src="img/icons/misc/warning.svg" alt="">
                 </div>
                 <!-- /.input -->
 
                 <div class="input input--error mb-3">
                   <input placeholder="Ваш телефон" autocomplete="off" type="tel" name="user_phone" class="input__field">
-                  <img data-tippy-content="Номер телефона указан не полностью или содержит ошибки" class="input__warning" src="" alt="">
+                  <img data-tippy-content="Номер телефона указан не полностью или содержит ошибки" class="input__warning" src="img/icons/misc/warning.svg" alt="">
                 </div>
                 <!-- /.input -->
 
                 <div class="input mb-4">
                   <textarea placeholder="Ваш вопрос" autocomplete="off" name="user_message" class="input__field input__field--box"></textarea>
-                  <img data-tippy-content="Вопрос слишком короткий или содержит недопустимые символы" class="input__warning" src="" alt="">
+                  <img data-tippy-content="Вопрос слишком короткий или содержит недопустимые символы" class="input__warning" src="img/icons/misc/warning.svg" alt="">
                 </div>
                 <!-- /.input -->
 
@@ -1071,7 +1071,7 @@
               <form action="" class="form form-callback">
                 <div class="input me-3">
                   <input placeholder="Номер телефона" autocomplete="off" type="tel" name="" class="input__field">
-                  <img data-tippy-content="" class="input__warning" src="" alt="">
+                  <img data-tippy-content="" class="input__warning" src="img/icons/misc/warning.svg" alt="">
                 </div>
                 <!-- /.input -->
 
@@ -1272,13 +1272,68 @@
     <!-- /.container -->
   </footer>
 
+  <div class="modal modal-callback micromodal-slide" id="modal-callback" aria-hidden="true">
+    <div class="modal__overlay" data-micromodal-close>
+      <div class="modal__container" role="dialog" aria-modal="true">
+        <header class="modal__header">
+          <div class="modal__title">Заказать обратный звонок</div>
+
+          <svg data-micromodal-close class="modal__close svg" viewBox="0 0 512 512">
+            <path fill="#272727" data-micromodal-close d="M284.286,256.002L506.143,34.144c7.811-7.811,7.811-20.475,0-28.285c-7.811-7.81-20.475-7.811-28.285,0L256,227.717
+          			L34.143,5.859c-7.811-7.811-20.475-7.811-28.285,0c-7.81,7.811-7.811,20.475,0,28.285l221.857,221.857L5.858,477.859
+          			c-7.811,7.811-7.811,20.475,0,28.285c3.905,3.905,9.024,5.857,14.143,5.857c5.119,0,10.237-1.952,14.143-5.857L256,284.287
+          			l221.857,221.857c3.905,3.905,9.024,5.857,14.143,5.857s10.237-1.952,14.143-5.857c7.811-7.811,7.811-20.475,0-28.285
+          			L284.286,256.002z" />
+          </svg>
+
+        </header>
+
+        <main class="modal__content">
+          <p class="modal__description">
+            Укажите Ваш имя и номер телефона, мы свяжемся с Вами в ближайшее время, согласуем удобное время и дату
+          </p>
+
+          <form class="form" action="" enctype="multipart/form-data">
+            <div class="input mb-3 mt-4">
+              <input placeholder="Ваше имя" autocomplete="off" type="text" name="user_name" class="input__field">
+              <img data-tippy-content="Имя содержит недопустимые символы" class="input__warning" src="img/icons/misc/warning.svg" alt="">
+            </div>
+            <!-- /.input -->
+
+            <div class="input input--error mb-3">
+              <input placeholder="Ваш телефон" autocomplete="off" type="tel" name="user_phone" class="input__field">
+              <img data-tippy-content="Номер телефона указан не полностью или содержит ошибки" class="input__warning" src="img/icons/misc/warning.svg" alt="">
+            </div>
+            <!-- /.input -->
+
+            <div class="input input--error mb-4">
+              <label class="checkbox">
+                <input type="checkbox">
+                <span class="checkbox__mark"></span>
+                <span class="checkbox__label">Я согласен на обработку моих персональных данных. <br> <a href="policy.html" class="checkbox__policy">Открыть политику конфиденциальности</a></span>
+              </label>
+            </div>
+            <!-- /.input -->
+
+            <button disabled data-sending="Отправка..." class="form__button button button-primary mx-auto" type="submit">Отправить</button>
+          </form>
+        </main>
+      </div>
+      <!-- /.modal__container -->
+    </div>
+    <!-- /.modal__overlay -->
+  </div>
+  <!-- /.modal -->
+
   <!-- Скрипты -->
   <!-- build:js js/script.min.js -->
   <script src="scripts/libraries/lazyload.js"></script>
   <script src="scripts/libraries/lodash.js"></script>
   <script src="scripts/libraries/swiper.js"></script>
   <script src="scripts/libraries/choices.min.js"></script>
+  <script src="scripts/libraries/micromodal.min.js"></script>
 
+  <script src="scripts/init.js"></script>
   <script src="scripts/slider.js"></script>
   <script src="scripts/header.js"></script>
   <script src="scripts/calculator.js"></script>
