feat: тултипы и доработка модального окна

--- a/src/index.html
+++ b/src/index.html
@@ -1300,13 +1300,13 @@
             </div>
             <!-- /.input -->
 
-            <div class="input input--error mb-3">
+            <div class="input mb-4">
               <input placeholder="Ваш телефон" autocomplete="off" type="tel" name="user_phone" class="input__field">
               <img data-tippy-content="Номер телефона указан не полностью или содержит ошибки" class="input__warning" src="img/icons/misc/warning.svg" alt="">
             </div>
             <!-- /.input -->
 
-            <div class="input input--error mb-4">
+            <div class="input input--error mb-4 pb-1">
               <label class="checkbox">
                 <input type="checkbox">
                 <span class="checkbox__mark"></span>
@@ -1332,6 +1332,8 @@
   <script src="scripts/libraries/swiper.js"></script>
   <script src="scripts/libraries/choices.min.js"></script>
   <script src="scripts/libraries/micromodal.min.js"></script>
+  <script src="scripts/libraries/popper.js"></script>
+  <script src="scripts/libraries/tippy.js"></script>
 
   <script src="scripts/init.js"></script>
   <script src="scripts/slider.js"></script>
