--- a/src/index.html
+++ b/src/index.html
@@ -685,140 +685,112 @@
       <!-- /.container -->
     </section>
 
-    <section class="section" id="portfolio">
+    <section class="section" id="portfolio-compact">
       <div class="container">
-        <div class="portfolio">
+        <div class="section__header">
           <h2 class="section__title">Наши работы</h2>
-
+          <span class="link link--arrow">
+            Более 500 довольных клиентов
+          </span>
         </div>
-        <!-- /.callback -->
-      </div>
-      <!-- /.container -->
-    </section>
+        <!-- /.section__header -->
 
-    <section class="section" id="useful">
-      <div class="container">
-        <div class="useful">
-          <div class="section__header">
-            <h2 class="section__title">Полезные материалы</h2>
-            <a href="" class="link link--nav link--arrow">
-              Все статьи
-              <svg class="link__arrow svg ms-2" width="13" height="10" viewBox="0 0 10 7" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path fill-rule="evenodd" clip-rule="evenodd"
-                  d="M6.83007 0.139209L9.86053 3.16392C10.0465 3.34953 10.0465 3.65047 9.86053 3.83608L6.83007 6.86079C6.64411 7.0464 6.3426 7.0464 6.15663 6.86079C5.97067 6.67518 5.97067 6.37424 6.15663 6.18863L8.37418 3.97529L0 3.97529L0 3.02471L8.37418 3.02471L6.15663 0.811367C5.97067 0.625755 5.97067 0.32482 6.15663 0.139209C6.3426 -0.0464029 6.64411 -0.0464029 6.83007 0.139209Z"
-                  fill="#969696"></path>
-              </svg>
-            </a>
-          </div>
-          <!-- /.section__header -->
+        <div class="portfolio">
+          <div class="row">
+            <div class="col-3">
+              <div class="portfolio__menu">
+                <div class="portfolio__wrapper custom-scrollbar">
+                  <div class="portfolio__category">Москитные сетки</div>
+                  <ul class="portfolio__list">
+                    <li class="portfolio__subcategory portfolio__highlight">Стандарт</li>
+                    <li class="portfolio__subcategory">Внутренняя</li>
+                    <li class="portfolio__subcategory">Антипыльца</li>
+                    <li class="portfolio__subcategory">Антипыль</li>
+                    <li class="portfolio__subcategory">Ультравью</li>
+                    <li class="portfolio__subcategory">Проведал</li>
+                    <li class="portfolio__subcategory">Дверь</li>
+                    <li class="portfolio__subcategory mb-2">Антикошка</li>
+                  </ul>
 
-          <div class="swiper swiper--overflow slider-useful">
-            <div class="swiper-wrapper">
-              <div class="swiper-slide">
-                <div class="useful__card">
-                  <div class="useful__picture">
-                    <img class="image image--cover" src="img/page/main/useful/1.jpg" alt="">
-                  </div>
-                  <!-- /.useful__picture -->
+                  <div class="portfolio__category">Рулонные шторы</div>
+                  <ul class="portfolio__list">
+                    <li class="portfolio__subcategory">Жалюзи</li>
+                    <li class="portfolio__subcategory">День-Ночь</li>
+                    <li class="portfolio__subcategory">Плиссе</li>
+                    <li class="portfolio__subcategory">Гранд</li>
+                    <li class="portfolio__subcategory">Стандарт</li>
+                    <li class="portfolio__subcategory">Гранд День-Ночь</li>
+                  </ul>
 
-                  <div class="useful__wrapper">
-                    <h3 class="useful__title">Как установить изделие м ак установить изделие ак установить изделие</h3>
-                    <div class="useful__info">
-                      <time class="useful__date">26.09.21</time>
-                      <span class="useful__views">
-                        1200
-                        <img class="ms-2" src="img/icons/misc/eye.svg" alt="">
-                      </span>
-                    </div>
-                    <!-- /.useful__info -->
-                    <button class="useful__button button button-primary">Подробнее</button>
-                  </div>
-                  <!-- /.useful__wrapper -->
+                  <div class="portfolio__category">Тонировка окон</div>
+                  <div class="portfolio__category">Прочие услуги</div>
                 </div>
-                <!-- /.useful__card -->
+                <!-- /.portfolio__wrapper -->
               </div>
-              <!-- /.swiper-slide -->
-
-              <div class="swiper-slide">
-                <div class="useful__card">
-                  <div class="useful__picture">
-                    <img class="image image--cover" src="img/page/main/useful/1.jpg" alt="">
-                  </div>
-                  <!-- /.useful__picture -->
-
-                  <div class="useful__wrapper">
-                    <h3 class="useful__title">Как установить изделие м ак установить изделие ак установить изделие</h3>
-                    <div class="useful__info">
-                      <time class="useful__date">26.09.21</time>
-                      <span class="useful__views">
-                        1200
-                        <img class="ms-2" src="img/icons/misc/eye.svg" alt="">
-                      </span>
-                    </div>
-                    <!-- /.useful__info -->
-                    <button class="useful__button button button-primary">Подробнее</button>
-                  </div>
-                  <!-- /.useful__wrapper -->
-                </div>
-                <!-- /.useful__card -->
-              </div>
-              <!-- /.swiper-slide -->
-
-              <div class="swiper-slide">
-                <div class="useful__card">
-                  <div class="useful__picture">
-                    <img class="image image--cover" src="img/page/main/useful/1.jpg" alt="">
-                  </div>
-                  <!-- /.useful__picture -->
-
-                  <div class="useful__wrapper">
-                    <h3 class="useful__title">Как установить изделие м ак установить изделие ак установить изделие</h3>
-                    <div class="useful__info">
-                      <time class="useful__date">26.09.21</time>
-                      <span class="useful__views">
-                        1200
-                        <img class="ms-2" src="img/icons/misc/eye.svg" alt="">
-                      </span>
-                    </div>
-                    <!-- /.useful__info -->
-                    <button class="useful__button button button-primary">Подробнее</button>
-                  </div>
-                  <!-- /.useful__wrapper -->
-                </div>
-                <!-- /.useful__card -->
-              </div>
-              <!-- /.swiper-slide -->
-
-              <div class="swiper-slide">
-                <div class="useful__card">
-                  <div class="useful__picture">
-                    <img class="image image--cover" src="img/page/main/useful/1.jpg" alt="">
-                  </div>
-                  <!-- /.useful__picture -->
-
-                  <div class="useful__wrapper">
-                    <h3 class="useful__title">Как установить изделие</h3>
-                    <div class="useful__info">
-                      <time class="useful__date">27.09.21</time>
-                      <span class="useful__views">
-                        340
-                        <img class="ms-2" src="img/icons/misc/eye.svg" alt="">
-                      </span>
-                    </div>
-                    <!-- /.useful__info -->
-                    <button class="useful__button button button-primary">Подробнее</button>
-                  </div>
-                  <!-- /.useful__wrapper -->
-                </div>
-                <!-- /.useful__card -->
-              </div>
-              <!-- /.swiper-slide -->
+              <!-- /.portfolio__menu -->
             </div>
-            <!-- /.swiper-wrapper -->
+            <!-- /.col-4 -->
+
+            <div class="col-9">
+              <div class="portfolio__gallery">
+                <div class="row">
+                  <div class="col-4 mb-4">
+                    <div class="portfolio__picture">
+                      <img src="img/portfolio/1.jpg" alt="" class="portfolio__image image image--cover">
+                    </div>
+                    <!-- /.portfolio__picture -->
+                  </div>
+                  <!-- /.col-4 -->
+
+                  <div class="col-4 mb-4">
+                    <div class="portfolio__picture">
+                      <img src="img/portfolio/2.jpg" alt="" class="portfolio__image image image--cover">
+                    </div>
+                    <!-- /.portfolio__picture -->
+                  </div>
+                  <!-- /.col-4 -->
+
+                  <div class="col-4 mb-4">
+                    <div class="portfolio__picture">
+                      <img src="img/portfolio/3.jpg" alt="" class="portfolio__image image image--cover">
+                    </div>
+                    <!-- /.portfolio__picture -->
+                  </div>
+                  <!-- /.col-4 -->
+
+                  <div class="col-4">
+                    <div class="portfolio__picture">
+                      <img src="img/portfolio/4.jpg" alt="" class="portfolio__image image image--cover">
+                    </div>
+                    <!-- /.portfolio__picture -->
+                  </div>
+                  <!-- /.col-4 -->
+
+                  <div class="col-4">
+                    <div class="portfolio__picture">
+                      <img src="img/portfolio/5.jpg" alt="" class="portfolio__image image image--cover">
+                    </div>
+                    <!-- /.portfolio__picture -->
+                  </div>
+                  <!-- /.col-4 -->
+
+                  <div class="col-4">
+                    <div class="portfolio__picture">
+                      <img src="img/portfolio/6.jpg" alt="" class="portfolio__image image image--cover">
+                    </div>
+                    <!-- /.portfolio__picture -->
+                  </div>
+                  <!-- /.col-4 -->
+                </div>
+                <!-- /.row -->
+              </div>
+              <!-- /.portfolio__gallery -->
+            </div>
+            <!-- /.col-8 -->
           </div>
-          <!-- /.swiper swiper--overflow slider-useful -->
+          <!-- /.row -->
         </div>
-        <!-- /.callback -->
+        <!-- /.portfolio -->
       </div>
       <!-- /.container -->
     </section>
@@ -949,6 +921,133 @@
           <!-- /.order-scheme__list -->
         </div>
         <!-- /.order -->
+      </div>
+      <!-- /.container -->
+    </section>
+
+    <section class="section" id="useful">
+      <div class="container">
+        <div class="useful">
+          <div class="section__header">
+            <h2 class="section__title">Полезные материалы</h2>
+            <a href="" class="link link--nav link--arrow">
+              Все статьи
+              <svg class="link__arrow svg ms-2" width="13" height="10" viewBox="0 0 10 7" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" clip-rule="evenodd"
+                  d="M6.83007 0.139209L9.86053 3.16392C10.0465 3.34953 10.0465 3.65047 9.86053 3.83608L6.83007 6.86079C6.64411 7.0464 6.3426 7.0464 6.15663 6.86079C5.97067 6.67518 5.97067 6.37424 6.15663 6.18863L8.37418 3.97529L0 3.97529L0 3.02471L8.37418 3.02471L6.15663 0.811367C5.97067 0.625755 5.97067 0.32482 6.15663 0.139209C6.3426 -0.0464029 6.64411 -0.0464029 6.83007 0.139209Z"
+                  fill="#969696"></path>
+              </svg>
+            </a>
+          </div>
+          <!-- /.section__header -->
+
+          <div class="swiper swiper--overflow slider-useful">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
+                <div class="useful__card">
+                  <div class="useful__picture">
+                    <img class="image image--cover" src="img/page/main/useful/1.jpg" alt="">
+                  </div>
+                  <!-- /.useful__picture -->
+
+                  <div class="useful__wrapper">
+                    <h3 class="useful__title">Как установить изделие м ак установить изделие ак установить изделие</h3>
+                    <div class="useful__info">
+                      <time class="useful__date">26.09.21</time>
+                      <span class="useful__views">
+                        1200
+                        <img class="ms-2" src="img/icons/misc/eye.svg" alt="">
+                      </span>
+                    </div>
+                    <!-- /.useful__info -->
+                    <button class="useful__button button button-primary">Подробнее</button>
+                  </div>
+                  <!-- /.useful__wrapper -->
+                </div>
+                <!-- /.useful__card -->
+              </div>
+              <!-- /.swiper-slide -->
+
+              <div class="swiper-slide">
+                <div class="useful__card">
+                  <div class="useful__picture">
+                    <img class="image image--cover" src="img/page/main/useful/1.jpg" alt="">
+                  </div>
+                  <!-- /.useful__picture -->
+
+                  <div class="useful__wrapper">
+                    <h3 class="useful__title">Как установить изделие м ак установить изделие ак установить изделие</h3>
+                    <div class="useful__info">
+                      <time class="useful__date">26.09.21</time>
+                      <span class="useful__views">
+                        1200
+                        <img class="ms-2" src="img/icons/misc/eye.svg" alt="">
+                      </span>
+                    </div>
+                    <!-- /.useful__info -->
+                    <button class="useful__button button button-primary">Подробнее</button>
+                  </div>
+                  <!-- /.useful__wrapper -->
+                </div>
+                <!-- /.useful__card -->
+              </div>
+              <!-- /.swiper-slide -->
+
+              <div class="swiper-slide">
+                <div class="useful__card">
+                  <div class="useful__picture">
+                    <img class="image image--cover" src="img/page/main/useful/1.jpg" alt="">
+                  </div>
+                  <!-- /.useful__picture -->
+
+                  <div class="useful__wrapper">
+                    <h3 class="useful__title">Как установить изделие м ак установить изделие ак установить изделие</h3>
+                    <div class="useful__info">
+                      <time class="useful__date">26.09.21</time>
+                      <span class="useful__views">
+                        1200
+                        <img class="ms-2" src="img/icons/misc/eye.svg" alt="">
+                      </span>
+                    </div>
+                    <!-- /.useful__info -->
+                    <button class="useful__button button button-primary">Подробнее</button>
+                  </div>
+                  <!-- /.useful__wrapper -->
+                </div>
+                <!-- /.useful__card -->
+              </div>
+              <!-- /.swiper-slide -->
+
+              <div class="swiper-slide">
+                <div class="useful__card">
+                  <div class="useful__picture">
+                    <img class="image image--cover" src="img/page/main/useful/1.jpg" alt="">
+                  </div>
+                  <!-- /.useful__picture -->
+
+                  <div class="useful__wrapper">
+                    <h3 class="useful__title">Как установить изделие</h3>
+                    <div class="useful__info">
+                      <time class="useful__date">27.09.21</time>
+                      <span class="useful__views">
+                        340
+                        <img class="ms-2" src="img/icons/misc/eye.svg" alt="">
+                      </span>
+                    </div>
+                    <!-- /.useful__info -->
+                    <button class="useful__button button button-primary">Подробнее</button>
+                  </div>
+                  <!-- /.useful__wrapper -->
+                </div>
+                <!-- /.useful__card -->
+              </div>
+              <!-- /.swiper-slide -->
+            </div>
+            <!-- /.swiper-wrapper -->
+          </div>
+          <!-- /.swiper swiper--overflow slider-useful -->
+        </div>
+        <!-- /.callback -->
       </div>
       <!-- /.container -->
     </section>
