--- a/src/index.html
+++ b/src/index.html
@@ -205,7 +205,17 @@
 
                 <div class="catalog__content">
                   <h3 class="catalog__title mb-2">Москитные сетки и двери</h3>
-                  <p class="catalog__description">Москитные сетки и двери</p>
+                  <div class="catalog__wrapper">
+                    <p class="catalog__description">Любые виды и формы изделий</p>
+                    <span class="catalog__link link link--arrow">Подробнее
+                      <svg class="link__arrow svg ms-2" width="13" height="10" viewBox="0 0 10 7" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" clip-rule="evenodd"
+                          d="M6.83007 0.139209L9.86053 3.16392C10.0465 3.34953 10.0465 3.65047 9.86053 3.83608L6.83007 6.86079C6.64411 7.0464 6.3426 7.0464 6.15663 6.86079C5.97067 6.67518 5.97067 6.37424 6.15663 6.18863L8.37418 3.97529L0 3.97529L0 3.02471L8.37418 3.02471L6.15663 0.811367C5.97067 0.625755 5.97067 0.32482 6.15663 0.139209C6.3426 -0.0464029 6.64411 -0.0464029 6.83007 0.139209Z"
+                          fill="#969696"></path>
+                      </svg>
+                    </span>
+                  </div>
+                  <!-- /.catalog__wrapper -->
                 </div>
                 <!-- /.catalog__content -->
 
@@ -224,7 +234,17 @@
 
                 <div class="catalog__content">
                   <h3 class="catalog__title mb-2">Рулонные шторы и Жалюзи</h3>
-                  <p class="catalog__description">Москитные сетки и двери</p>
+                  <div class="catalog__wrapper">
+                    <p class="catalog__description">Любые виды и формы изделий</p>
+                    <span class="catalog__link link link--arrow">Подробнее
+                      <svg class="link__arrow svg ms-2" width="13" height="10" viewBox="0 0 10 7" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" clip-rule="evenodd"
+                          d="M6.83007 0.139209L9.86053 3.16392C10.0465 3.34953 10.0465 3.65047 9.86053 3.83608L6.83007 6.86079C6.64411 7.0464 6.3426 7.0464 6.15663 6.86079C5.97067 6.67518 5.97067 6.37424 6.15663 6.18863L8.37418 3.97529L0 3.97529L0 3.02471L8.37418 3.02471L6.15663 0.811367C5.97067 0.625755 5.97067 0.32482 6.15663 0.139209C6.3426 -0.0464029 6.64411 -0.0464029 6.83007 0.139209Z"
+                          fill="#969696"></path>
+                      </svg>
+                    </span>
+                  </div>
+                  <!-- /.catalog__wrapper -->
                 </div>
                 <!-- /.catalog__content -->
 
@@ -642,7 +662,7 @@
           <h2 class="section__title">География нашей работы</h2>
 
           <div class="row">
-            <div class="col-6">
+            <div class="col-7">
               <div id="map-wrapper" class="map__wrapper">
                 <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Aeb43c71a35f82b72f4fb211ee6d0101918a651b0d54c8fcffdf3354cc4e95772&amp;width=100%&amp;height=100%&amp;lang=ru_RU&amp;scroll=false"></script>
               </div>
@@ -650,7 +670,7 @@
             </div>
             <!-- /.col-6 -->
 
-            <div class="col-6">
+            <div class="col-5">
               <form class="form form-map" action="" enctype="multipart/form-data">
                 <h3 class="form__title">Не увидели свой район или город?</h3>
                 <p class="form__description">Оставьте заявку, и наш менеджер перезвонит Вам и уточнит территорию по которой мы работаем!</p>
@@ -667,9 +687,12 @@
                 </div>
                 <!-- /.input -->
 
-                <div class="input mb-4">
-                  <textarea placeholder="Ваш вопрос" autocomplete="off" name="user_message" class="input__field input__field--box"></textarea>
-                  <img data-tippy-content="Вопрос слишком короткий или содержит недопустимые символы" class="input__warning" src="img/icons/misc/warning.svg" alt="">
+                <div class="input input--error mb-4 pb-1">
+                  <label class="checkbox">
+                    <input type="checkbox">
+                    <span class="checkbox__mark"></span>
+                    <span class="checkbox__label">Я согласен на обработку моих персональных данных. <br> <a href="policy.html" class="checkbox__policy">Открыть политику конфиденциальности</a></span>
+                  </label>
                 </div>
                 <!-- /.input -->
 
@@ -929,7 +952,7 @@
       <div class="container">
         <div class="useful">
           <div class="section__header">
-            <h2 class="section__title">Полезные материалы</h2>
+            <h2 class="section__title">Полезные статьи</h2>
             <a href="" class="link link--nav link--arrow">
               Все статьи
               <svg class="link__arrow svg ms-2" width="13" height="10" viewBox="0 0 10 7" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -1168,13 +1191,25 @@
               </p>
 
               <form action="" class="form form-callback">
-                <div class="input me-3">
-                  <input placeholder="Номер телефона" autocomplete="off" type="tel" name="" class="input__field">
-                  <img data-tippy-content="" class="input__warning" src="img/icons/misc/warning.svg" alt="">
+                <div class="form__wrapper">
+                  <div class="input me-3">
+                    <input placeholder="Номер телефона" autocomplete="off" type="tel" name="" class="input__field">
+                    <img data-tippy-content="" class="input__warning" src="img/icons/misc/warning.svg" alt="">
+                  </div>
+                  <!-- /.input -->
+
+                  <button data-sending="Отправка..." class="form__button button button-primary" type="submit">Отправить</button>
+                </div>
+                <!-- /.form__wrapper -->
+
+                <div class="input input--error mt-4">
+                  <label class="checkbox">
+                    <input type="checkbox">
+                    <span class="checkbox__mark"></span>
+                    <span class="checkbox__label">Я согласен на обработку моих персональных данных. <br> <a href="policy.html" class="checkbox__policy">Открыть политику конфиденциальности</a></span>
+                  </label>
                 </div>
                 <!-- /.input -->
-
-                <button data-sending="Отправка..." class="form__button button button-primary" type="submit">Отправить</button>
               </form>
             </div>
             <!-- /.col-6 -->
