--- a/src/index.html
+++ b/src/index.html
@@ -662,7 +662,7 @@
           <h2 class="section__title">География нашей работы</h2>
 
           <div class="row">
-            <div class="col-7">
+            <div class="col-6 col-xl-7">
               <div id="map-wrapper" class="map__wrapper">
                 <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Aeb43c71a35f82b72f4fb211ee6d0101918a651b0d54c8fcffdf3354cc4e95772&amp;width=100%&amp;height=100%&amp;lang=ru_RU&amp;scroll=false"></script>
               </div>
@@ -670,7 +670,7 @@
             </div>
             <!-- /.col-6 -->
 
-            <div class="col-5">
+            <div class="col-6 col-xl-5">
               <form class="form form-map" action="" enctype="multipart/form-data">
                 <h3 class="form__title">Не увидели свой район или город?</h3>
                 <p class="form__description">Оставьте заявку, и наш менеджер перезвонит Вам и уточнит территорию по которой мы работаем!</p>
